feat: update CharacterCatalog to use predefined display names for characters